force-app/main/default/objects/RC_director__c/RC_director__c.object-meta.xml
<CustomObject>
    <label>RC_director</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>RC_directors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RC_directors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>