force-app/main/default/objects/RC_director__c/fields/directorEmail__c.field-meta.xml
<CustomField>
    <fullName>directorEmail__c</fullName>
    <description>The email of the director</description>
    <label>directorEmail</label>
    <length>250</length>
    <type>Text</type>
</CustomField>