force-app/main/default/objects/RC_director__c/fields/directorName__c.field-meta.xml
<CustomField>
    <fullName>directorName__c</fullName>
    <description>The name of the director</description>
    <inlineHelpText>Enter the name of the director</inlineHelpText>
    <label>directorName</label>
    <length>250</length>
    <type>Text</type>
</CustomField>