force-app/main/default/objects/RC_director__c/fields/directorPassword__c.field-meta.xml
<CustomField>
    <fullName>directorPassword__c</fullName>
    <description>The password</description>
    <label>directorPassword</label>
    <length>250</length>
    <type>Text</type>
</CustomField>