force-app/main/default/objects/RC_director__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>directorName__c</columns>
    <columns>directorEmail__c</columns>
    <columns>directorPassword__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>